Fix level-tooltip going out of bounds

--- a/css/level-select.css
+++ b/css/level-select.css
@@ -107,12 +107,21 @@
         width: max-content;
         z-index: 20;
         line-height: 1.2;
-        left: 50%;
-        transform: translateX(-50%);
         background-color: var(--gray-5);
         padding: 0.375rem 0.625rem;
         border-radius: 0.625rem;
         display: none; /* Gets overwritten when hovered or focused */
+        left: 50%;
+        transform: translateX(-50%);
+    }
+    li:first-child .level-tooltip {
+        left: -0.125rem;
+        transform: none;
+    }
+    li:last-child .level-tooltip {
+        left: auto;
+        right: -0.125rem;
+        transform: none;
     }
     .level-tooltip::after {
         position: absolute;
@@ -121,8 +130,15 @@
         width: 1.5rem;
         height: 1.5rem;
         background-color: var(--gray-5);
-        top: 100%;
+        top: calc(100% - 0.0625rem);
         clip-path: polygon(0% 0%, 100% 0%, 50% 50%);
+    }
+    li:first-child .level-tooltip::after {
+        left: 0.625rem;
+    }
+    li:last-child .level-tooltip::after {
+        left: auto;
+        right: 0.625rem;
     }
     /* Show the tooltip if:
        1. The level is hovered
